assets/99_app.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin-ext');
@import url('https://fonts.googleapis.com/css?family=Special+Elite&display=swap');

html, body {
	font-family: 'Open Sans';
}

h1, h2, h3, h4, h5, h6 {
	font-family: 'Special Elite';
	letter-spacing: .02em;
}

label.label:not(:last-child) {
	margin: 1.5em 0 1ex;
}

.page-bar-container {
	padding-bottom: 5px;
	padding-top: 5px;
}

.page-bar-row {
	padding: 5px 0;
	letter-spacing: 0.3em;
	font-size: 0.9em;
}

.section--form {
	padding-top: 0;
	margin-bottom: 0;
}
.section.graph {
	padding-top: 0;
	margin-top: -3rem;
}

/* We want vertical Checklists always. */
.control label.checkbox {
	display: block;
}

.header {
	background-image: url('/assets/header_background.jpg');
	height: 400px;
	padding: 0;
}

@media (max-width: 749px) {
	.header {
		background-position: 50% 8%;
	}
}

@media (min-width: 999px) {
	.header {
		background-size: cover;
	}
}

@media (min-width: 750px) {
	.header {
		background-position: 50% 25%;
	}
}

.header .page-bar {
	font-family: "Lato",sans-serif;
	font-weight: 400;
	border-bottom: 1px solid #e6e6e6;
	font-size: 12px;
	line-height: 14px;
	border-color: #6e768c;
	background-color: #515767;
	color: #fff;
	background: #8e1e23;
}

.header--logo {
	width: 6.8em;
}

.header--map {
	width: 15.0em;
}

.header--headers {
	width: 85%;
}

.header--titles {
	width: 100%;
}

.header--snap-link img {
	height: 5.4em;
}

.intro-text {
	font-size: 110%;
	font-family: 'Special Elite';
	letter-spacing: .02em;
	text-align: right;
}

@media (max-width: 767px) {
	.intro-text {
		text-align: center;
	}
	.extent-wrapper.mobile {
		width: 100%;
		display: block;
	}
	.extent-wrapper.desktop {
		display: none;
	}
}

@media (min-width: 768px) {
	.extent-wrapper.desktop {
		float: right;
		width: 50%;
		display: block;
	}
	.extent-wrapper.mobile {
		display: none;
	}
}

@media (min-width: 768px) and (max-width: 1699px) {
	.extent-map {
		margin-top: calc(200px - (1vw * 15));
	}
}

@media (min-width: 1700px) {
	.extent-map {
		height: 120%;
		margin-top: -60px;
	}
}

@media (min-width: 768px) {
	.extent-wrapper.desktop {
		shape-outside: ellipse(50% 80% at 50% 80%);
	}
}

@media (min-width: 768px) and (max-width: 899px) {
	.extent-wrapper.desktop {
		height: 480px;
	}
}

@media (min-width: 900px) {
	.extent-wrapper.desktop {
		height: 400px;
	}
}

.container.top {
	clear: both;
}

@media (max-width: 767px) {
	.container.top {
		padding: 0 20px;
	}

	.container.middle {
		padding: 0 20px;
	}
}

@media (min-width: 768px) and (max-width: 1215px) {
	.container.top {
		padding: 0 100px;
	}

	.container.middle {
		padding: 0 100px;
	}
}

@media (min-width: 1216px) {
	.container.top {
		padding: 0 150px;
	}
	.container.middle {
		padding: 0 150px;
	}
}

.container.middle label.label:not(:last-child) {
	margin-top: 0;
}

.form label, .form input {
	font-size: 130%;
}

label.checkbox input, label.radio input {
	position: relative;
	bottom: .1ex;
	margin-right: .5ex;
}

.radio {
	margin: 5px 0;
	display: block;
}

.radio+.radio {
	margin-left: 0;
}

.camera-icon span {
  display: inline-block;
  position: relative;
  top: 0.25rem;
  padding: 0 3px;
}

.camera-icon span path {
  fill: #ccc;
}

.footer p {
	margin: 1em auto;
}

.footer a {
	display: inline-block;
}

.footer {
  box-shadow: inset 0 7px 9px -7px rgb(0 0 0 / 40%);
  padding-bottom: 8rem;
}

.footer a img {
	height: 5em;
	margin: 1em 1.5em;
}

.footer img {
  min-width: 12.5vw;
  max-width: 150px;
  padding: 0 1rem;
  display: block;
  position: relative;
  top: 0.25rem;
  object-fit: contain;
  align-self: flex-start;
}

.footer p {
  text-align: left;
  font-size: 0.95rem;
  margin: 0 1rem 1rem;
  margin-top: 0px;
  margin-right: 1rem;
  margin-bottom: 1rem;
  margin-left: 1rem;
}

.footer div.wrapper {
  margin: 2rem auto 0;
  display: flex;
  height: 8rem;
  max-height: 8rem;
}

._dash-undo-redo {
	display: none;
}

@media print {
	.no-print * {
		display: none;
	}
}

